objects/ASI_CRM_Credit_Debit_Note__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Attention_To_Email__c</fullName>
        <label>Attention To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Attention_To_Person__c</fullName>
        <label>Attention To Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Base_Currency__c</fullName>
        <label>Base Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_No_Original__c</fullName>
        <label>Contract No. (Original)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG Contract Margin Credit Note, SG Contract Margin Credit Note (Read Only)</value>
            </filterItems>
            <filterItems>
                <field>ASI_TH_CRM_Contract__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM SG 2. Contract, ASI CRM SG Contract (Read-Only)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG Contract Margin Debit Note, SG Contract Margin Debit Note (Read Only)</value>
            </filterItems>
            <filterItems>
                <field>ASI_TH_CRM_Contract__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM SG 2. Contract, ASI CRM SG Contract (Read-Only)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Credit/Debit Notes</relationshipLabel>
        <relationshipName>Credit_Debit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_DF_DP__c</fullName>
        <formula>IF(TEXT( ASI_CRM_Market__c )= &quot;Singapore DP&quot;, &quot;1&quot;, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duty Free/Duty Paid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Document_Number__c</fullName>
        <label>Document Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Document_Type__c</fullName>
        <formula>IF( CONTAINS( RecordType.DeveloperName , &quot;Debit&quot;) , &quot;RI&quot;, &quot;RM&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GL_Date__c</fullName>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GST__c</fullName>
        <label>GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Location__c</fullName>
        <formula>CASE( TEXT( ASI_CRM_Market__c ) , 
&quot;Singapore DP&quot;, &quot;SG&quot;,
&quot;Singapore DF&quot;, &quot;SG&quot;,
&quot;Indonesia&quot;, &quot;IN&quot;,
&quot;Vietnam&quot;, &quot;IC&quot;,
&quot;Cambodia&quot;, &quot;CA&quot;,
&quot;Myanmar&quot;, &quot;MM&quot;,
&quot;Malaysia&quot;, &quot;MY&quot;,
&quot;ERROR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Singapore DP</fullName>
                </value>
                <value>
                    <fullName>Singapore DF</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Laos</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Malaysia DF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <label>Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG Manual Credit Note</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (SG), Wholesaler (SG)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>SG Manual Credit Note</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Credit/Debit Notes</relationshipLabel>
        <relationshipName>Credit_Debit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Owner_Alias__c</fullName>
        <formula>Owner:User.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Terms_Code__c</fullName>
        <formula>TEXT(ASI_CRM_Outlet__r.ASI_CRM_SG_Payment_Terms_A_R__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reason__c</fullName>
        <label>Reason</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receipt_End_Date__c</fullName>
        <label>Receipt End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receipt_Start_Date__c</fullName>
        <label>Receipt Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recipient_Party__c</fullName>
        <label>Recipient Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Delete_Credit_Note_Header__c</fullName>
        <description>IF( ( RecordType.DeveloperName = &quot;ASI_CRM_SG_Wholesaler_Credit_Note&quot; ||  RecordType.DeveloperName = 
&quot;ASI_CRM_SG_Wholesaler_Debit_Note&quot;  ) &amp;&amp; ASI_CRM_Total_Amount__c = 0, TRUE, FALSE)</description>
        <formula>IF( ( RecordType.DeveloperName = &quot;ASI_CRM_SG_Wholesaler_Credit_Note&quot; ||  RecordType.DeveloperName = 
&quot;ASI_CRM_SG_Wholesaler_Debit_Note&quot;  ) &amp;&amp; ASI_CRM_Total_Amount__c = 0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delete Credit Note Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Duplicate_Rule_Unique_Key__c</fullName>
        <label>Duplicate Rule Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_FWO_End_Date__c</fullName>
        <label>Rebate End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_FWO_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FWO Period</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_Credit_Debit_Note__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG Wholesaler Rebate Period</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Credit_Debit_Note__c</referenceTo>
        <relationshipLabel>Credit/Debit Note Of This Period</relationshipLabel>
        <relationshipName>Credit_Debit_Notes_FWO_Period_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_FWO_Start_Date__c</fullName>
        <label>Rebate Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_First_Calendar_Day_of_FWO__c</fullName>
        <formula>DATE(year(
 ASI_CRM_SG_FWO_Start_Date__c ) ,month(
 ASI_CRM_SG_FWO_Start_Date__c ),1)</formula>
        <label>First Calendar Day of FWO Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Manager_of_Wholesaler_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager of Wholesaler Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Debit_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Month_Year__c</fullName>
        <label>Month/Year</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_No_Of_Credit_Notes__c</fullName>
        <label>No Of Credit Notes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Previous_Month_Exist__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Previous Month Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FWO</fullName>
                </value>
                <value>
                    <fullName>Portfolio</fullName>
                </value>
                <value>
                    <fullName>OOM</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Record_Type_Dev_Name__c</fullName>
        <label>Record Type Dev Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_ActAmtBaseCurr__c</fullName>
        <formula>ASI_CRM_Total_Actual_Amount__c *  ASI_CRM_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Amount In Base Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Wholesaler_Owner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler Owner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Debit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_System_Generated_Message__c</fullName>
        <formula>IF ( ASI_CRM_SYS_System_Generated__c , 
&apos;THIS IS GENERATED BY SYSTEM&apos;, 
&apos;THIS IS CREATED MANUALLY&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS System Generated Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sync_To_JDE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync To JDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Amount__c</fullName>
        <formula>if( ASI_CRM_Tax_Rate_Area__c = &apos;SG3&apos;,
ASI_CRM_Total_Actual_Amount__c * 0.07,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Explanation_Code__c</fullName>
        <formula>IF ( 
NOT(ISBLANK( ASI_CRM_Wholesaler__c )), 
TEXT( ASI_CRM_Wholesaler__r.ASI_CRM_SG_Tax_Expl_Code__c ), 
TEXT(ASI_CRM_Outlet__r.ASI_CRM_SG_Tax_Expl_Code__c ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Explanation Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Rate_Area__c</fullName>
        <formula>IF ( 
	NOT(ISBLANK( ASI_CRM_Wholesaler__c )), 
	TEXT(ASI_CRM_Wholesaler__r.ASI_CRM_SG_Tax_Rate_Area__c), 
	TEXT(ASI_CRM_Outlet__r.ASI_CRM_SG_Tax_Rate_Area__c ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate/Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Actual_Amount__c</fullName>
        <label>Total Actual Amount</label>
        <summarizedField>ASI_CRM_Credit_Debit_Note_Line_Item__c.ASI_CRM_Actual_Amount__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Credit_Debit_Note_Line_Item__c.ASI_CRM_Credit_Debit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Adjusted_Difference__c</fullName>
        <formula>ASI_CRM_Total_Actual_Amount__c - ASI_CRM_Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Adjusted Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>ASI_CRM_Credit_Debit_Note_Line_Item__c.ASI_CRM_Amount__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Credit_Debit_Note_Line_Item__c.ASI_CRM_Credit_Debit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Gross_Amount__c</fullName>
        <formula>ASI_CRM_Total_Actual_Amount__c +  ASI_CRM_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <formula>IF( CONTAINS( RecordType.DeveloperName , &quot;Credit&quot;) , &quot;Credit&quot;, &quot;Debit&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>Please select correct Customer</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG Manual Debit Note, SG Manual Credit Note, SG Manual Debit Note Read Only, SG Manual Credit Note Read Only</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer (SG), Wholesaler (SG)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>SG Manual Debit Note, SG Manual Credit Note, SG Manual Debit Note Read Only, SG Manual Credit Note Read Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Credit/Debit Notes (Wholesaler)</relationshipLabel>
        <relationshipName>Credit_Debit_Notes_Wholesaler</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_x1st_Cal_Previous_FWO_Start_Date__c</fullName>
        <formula>date( year(DATE(year(
 ASI_CRM_SG_FWO_Start_Date__c ) ,month(
 ASI_CRM_SG_FWO_Start_Date__c ),1) - 1), month(DATE(year(
 ASI_CRM_SG_FWO_Start_Date__c ) ,month(
 ASI_CRM_SG_FWO_Start_Date__c ),1) - 1), 1)</formula>
        <label>First Cal Day of Previous FWO Start Date</label>
        <type>Date</type>
    </fields>
    <label>Credit/Debit Note</label>
    <listViews>
        <fullName>ASI_CRM_SG_Manual_Credit_Note_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Sync_To_JDE__c</columns>
        <columns>ASI_CRM_Document_Number__c</columns>
        <columns>ASI_CRM_Document_Type__c</columns>
        <columns>ASI_CRM_Reason__c</columns>
        <columns>ASI_CRM_Total_Actual_Amount__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_CRM_GL_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Credit_Debit_Note__c.ASI_CRM_SG_Manual_Credit_Note_Read_Only,ASI_CRM_Credit_Debit_Note__c.ASI_CRM_SG_Manual_Credit_Note</value>
        </filters>
        <label>SG - Manual Credit Note - All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_SG_Manual_Debit_Note_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Reason__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_CRM_GL_Date__c</columns>
        <columns>ASI_CRM_Verified__c</columns>
        <columns>ASI_CRM_Sync_To_JDE__c</columns>
        <columns>ASI_CRM_Document_Number__c</columns>
        <columns>ASI_CRM_Document_Type__c</columns>
        <columns>ASI_CRM_Total_Actual_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Credit_Debit_Note__c.ASI_CRM_SG_Manual_Debit_Note_Read_Only,ASI_CRM_Credit_Debit_Note__c.ASI_CRM_SG_Manual_Debit_Note</value>
        </filters>
        <label>SG - Manual Debit Note - All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <columns>ASI_CRM_Contract_No_Original__c</columns>
        <columns>ASI_CRM_Currency__c</columns>
        <columns>ASI_CRM_Document_Number__c</columns>
        <columns>ASI_CRM_Document_Type__c</columns>
        <columns>ASI_CRM_Exchange_Rate__c</columns>
        <columns>ASI_CRM_GL_Date__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>SG_Wholesaler_Rebate_Credit_Note</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Reason__c</columns>
        <columns>ASI_CRM_GL_Date__c</columns>
        <columns>ASI_CRM_Total_Actual_Amount__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Sync_To_JDE__c</columns>
        <columns>ASI_CRM_Document_Number__c</columns>
        <columns>ASI_CRM_Document_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Credit_Debit_Note__c.ASI_CRM_SG_Wholesaler_Credit_Note</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Credit_Debit_Note__c.ASI_CRM_SG_Manual_Credit_Note,ASI_CRM_Credit_Debit_Note__c.ASI_CRM_SG_Manual_Credit_Note_Read_Only</value>
        </filters>
        <label>SG - Wholesaler Rebate Credit Note</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ASI_SG</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SG_Wholesaler_Rebate_Debit_Note</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Reason__c</columns>
        <columns>ASI_CRM_GL_Date__c</columns>
        <columns>ASI_CRM_Total_Actual_Amount__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Sync_To_JDE__c</columns>
        <columns>ASI_CRM_Document_Number__c</columns>
        <columns>ASI_CRM_Document_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Credit_Debit_Note__c.ASI_CRM_SG_Wholesaler_Debit_Note</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Credit_Debit_Note__c.ASI_CRM_SG_Manual_Debit_Note,ASI_CRM_Credit_Debit_Note__c.ASI_CRM_SG_Manual_Debit_Note_Read_Only</value>
        </filters>
        <label>SG - Wholesaler Rebate Debit Note</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ASI_SG</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SG_Wholesaler_Rebate_Period</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Rebate_Type__c</columns>
        <columns>ASI_CRM_SG_FWO_Start_Date__c</columns>
        <columns>ASI_CRM_SG_FWO_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Credit_Debit_Note__c.ASI_CRM_SG_Wholesaler_FWO_Period</value>
        </filters>
        <label>SG - Wholesaler Rebate Period</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ASI_SG</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Credit/Debit Note No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit/Debit Notes</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Back_Rebate_Credit_Note</fullName>
        <active>true</active>
        <label>SG Back Rebate Credit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Back_Rebate_Credit_Note_Read_Only</fullName>
        <active>true</active>
        <label>SG Back Rebate Credit Note (Read Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Back_Rebate_Debit_Note</fullName>
        <active>true</active>
        <label>SG Back Rebate Debit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Back_Rebate_Debit_Note_Read_Only</fullName>
        <active>true</active>
        <label>SG Back Rebate Debit Note (Read Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Contract_Margin_Credit_Note</fullName>
        <active>true</active>
        <label>SG Contract Margin Credit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Contract_Margin_Credit_Note_Read_Only</fullName>
        <active>true</active>
        <label>SG Contract Margin Credit Note (Read Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Contract_Margin_Debit_Note</fullName>
        <active>true</active>
        <label>SG Contract Margin Debit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Contract_Margin_Debit_Note_Read_Only</fullName>
        <active>true</active>
        <label>SG Contract Margin Debit Note (Read Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Manual_Credit_Note</fullName>
        <active>true</active>
        <label>SG Manual Credit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Manual_Credit_Note_Read_Only</fullName>
        <active>true</active>
        <label>SG Manual Credit Note Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Manual_Debit_Note</fullName>
        <active>true</active>
        <label>SG Manual Debit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Manual_Debit_Note_Read_Only</fullName>
        <active>true</active>
        <label>SG Manual Debit Note Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Prompt_Payment_Credit_Note</fullName>
        <active>true</active>
        <label>SG Prompt Payment Credit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Prompt_Payment_Credit_Note_Read_Only</fullName>
        <active>true</active>
        <label>SG Prompt Payment Credit Note (Read Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Prompt_Payment_Debit_Note</fullName>
        <active>true</active>
        <label>SG Prompt Payment Debit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Prompt_Payment_Debit_Note_Read_Only</fullName>
        <active>true</active>
        <label>SG Prompt Payment Debit Note (Read Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Wholesaler_Credit_Note</fullName>
        <active>true</active>
        <label>SG Wholesaler Credit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Wholesaler_Debit_Note</fullName>
        <active>true</active>
        <label>SG Wholesaler Debit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Wholesaler_FWO_Period</fullName>
        <active>true</active>
        <label>SG Wholesaler Rebate Period</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_SG_Start_End_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>not( month( ASI_CRM_SG_FWO_Start_Date__c ) = month( ASI_CRM_SG_FWO_End_Date__c ) &amp;&amp; year( ASI_CRM_SG_FWO_Start_Date__c ) = year( ASI_CRM_SG_FWO_End_Date__c ))
&amp;&amp;

 RecordType.DeveloperName = &quot;ASI_CRM_SG_Wholesaler_FWO_Period&quot;</errorConditionFormula>
        <errorMessage>Start Date and End Date have to be in the same month.</errorMessage>
    </validationRules>
</CustomObject>